# cpp-cmake-vcpkg-labthingy

./: .gitignore  .gitmodules  Application  CMakeLists.txt  build.sh  buildAndRun.sh  clean.sh  dependenciesOnLinux.sh  imgui.ini  readme.md
build_linux/: Application
src/: Constants.hpp  Includes.hpp  Main.hpp  SineWave.cpp  SineWave.hpp  WaveDrawingProgram.cpp  WaveDrawingProgram.hpp  WaveGuiSettings.hpp  WindowProperties.hpp  main.cpp
src/PointerPlayground/: PointerPlayground.cpp  PointerPlayground.hpp
src/WaveDrawingProgram/: Constants.hpp  SineWave.cpp  SineWave.hpp  WaveDrawingProgram.cpp  WaveDrawingProgram.hpp  WaveGuiSettings.hpp
